# autokg

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: scale_benchmark.py
docs/: advanced-query-planning.md  best-in-class-roadmap.md  config-yaml.md  distributed-builds.md  enterprise-stores.md  go-to-market.md  mcp.md  production-hardening.md  query-backend.md  rbac-abac.md  stores.md  v1-core.md
evals/customer360/: questions.yml
evals/insurance/: questions.yml
examples/customer360/: README.md  autokg.yml  claude_desktop_config.json  make_demo_data.py
examples/insurance/: README.md  autokg.yml  claude_desktop_config.json  make_demo_data.py
scripts/: generate_insurance_data.py
site/: index.html
src/autokg/: __init__.py  _agent.py  _audit.py  _catalog.py  _connectors.py  _conversation.py  _core.py  _distributed.py  _enterprise_stores.py  _entity_resolver.py  _eval.py  _inference.py  _iri.py  _llm.py  _mapper.py  _masking.py  _observability.py  _ontology_tools.py  _oxigraph.py  _plugin.py  _profiler.py  _provenance.py  _query_backend.py  _query_planner.py  _rbac.py  _relationships.py  _schema_contract.py  _search.py  _security.py  _semantic_linker.py  _serializers.py  _stores.py  _templates.py  _types.py  _v1.py  _validation.py  _versioning.py  cli.py
src/autokg/server/: __init__.py  _mcp.py  _session.py  _tools.py  _transport.py
tests/: test_e2e_realworld.py  test_insurance_e2e.py
