[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autokg"
version = "0.2.0"
description = "One Build. Infinite Questions. Auto-generate RDF knowledge graphs from silver tables with MCP AI agent support."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "autokg contributors" }
]
keywords = ["knowledge-graph", "rdf", "sparql", "semantic", "medallion", "data-catalog"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Database",
]

dependencies = [
    "polars>=0.20.0",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
delta = ["deltalake>=0.20"]
sql = ["sqlalchemy>=2.0", "connectorx>=0.3"]
sparql = ["httpx>=0.27"]
oxigraph = ["pyoxigraph>=0.4"]
maplib = ["maplib>=0.20.0"]
mcp = ["aiohttp>=3.9"]
semantic = ["zvec>=0.5.0", "sentence-transformers>=3.0"]
all = ["autokg[pandas,delta,sql,sparql,oxigraph,maplib,mcp,semantic]"]

[project.scripts]
autokg = "autokg.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/autokg"]
